# futu_api

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build_image.yml
app/: __init__.py
app/api/: basic_api.py  routes.py  stock_api.py
app/middleware/: __init__.py  auth.py
app/services/: basic_service.py  stock_service.py
